--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -10,7 +10,13 @@
                     <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.content }}</p>
+                <p class="article-content">
+                    {% if post.content|length > 30 %}
+                        {{ post.content|slice:30 }} ...
+                    {% else %}
+                        {{ post.content }}
+                    {% endif %}
+                </p>
             </div>
         </article>
     {% endfor %}
