--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,6 +11,11 @@
             <div class="form-group">
                 <button class="btn btn-outline-info mt-2" type="submit">Login</button>
             </div>
+            <div class="pt-3">
+                <small class="text-muted">
+                    <a href="{% url 'password_reset'%}">Forgot password?</a>
+                </small>
+            </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
